--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,73 @@
 {
   "name": "api-clients/rx-operators",
   "license": "MIT",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "authors": [
     {
       "name": "Cees-Jan Kiewiet",
       "email": "ceesjank@gmail.com"
     }
-  ]
+  ],
+  "require": {
+    "reactivex/rxphp": "dev-custom_operators"
+  },
+  "require-dev": {
+    "api-clients/test-utilities": "dev-master"
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/mbonneau/RxPHP"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Rx\\Custom\\Operator\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Rx\\Tests\\Custom\\Operator\\": "tests/"
+    }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "scripts": {
+    "ensure-installed": "composer install --ansi -n -q",
+    "cs": [
+      "@ensure-installed",
+      "phpcs --standard=PSR2 src/"
+    ],
+    "unit": [
+      "@ensure-installed",
+      "phpunit --colors=always -c phpunit.xml.dist --coverage-text --coverage-html covHtml"
+    ],
+    "mutation": [
+      "@ensure-installed",
+      "if [ `php -m | grep xdebug | wc -l` -gt 0 ]; then humbug --ansi --incremental; fi"
+    ],
+    "qa-all": [
+      "@cs",
+      "@unit",
+      "@mutation"
+    ],
+    "qa-windows": [
+      "@cs",
+      "@unit"
+    ],
+    "qa-ci": [
+      "@qa-all"
+    ],
+    "qa-ci-windows": [
+      "@qa-windows"
+    ],
+    "qa-contrib": [
+      "@qa-all"
+    ],
+    "ci-coverage": [
+      "if [ -f ./build/logs/clover.xml ]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover ./build/logs/clover.xml; fi"
+    ]
+  }
 }
