--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     }
   ],
   "require": {
-    "reactivex/rxphp": "dev-custom_operators"
+    "php": "^7.0",
+    "reactivex/rxphp": "dev-custom_operators as 1.4.0",
+    "rx/operator-extras": "^0.3.0"
   },
   "require-dev": {
     "api-clients/test-utilities": "dev-master"
