--- a/composer.json
+++ b/composer.json
@@ -46,14 +46,9 @@
       "@ensure-installed",
       "phpunit --colors=always -c phpunit.xml.dist --coverage-text --coverage-html covHtml"
     ],
-    "mutation": [
-      "@ensure-installed",
-      "if [ `php -m | grep xdebug | wc -l` -gt 0 ]; then humbug --ansi --incremental; fi"
-    ],
     "qa-all": [
       "@cs",
-      "@unit",
-      "@mutation"
+      "@unit"
     ],
     "qa-windows": [
       "@cs",
