--- a/composer.json
+++ b/composer.json
@@ -11,26 +11,20 @@
   ],
   "require": {
     "php": "^7.0",
-    "reactivex/rxphp": "dev-custom_operators as 1.4.0",
+    "api-clients/rx": "dev-master",
     "rx/operator-extras": "^0.3.0"
   },
   "require-dev": {
     "api-clients/test-utilities": "dev-master"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/mbonneau/RxPHP"
-    }
-  ],
   "autoload": {
     "psr-4": {
-      "Rx\\Custom\\Operator\\": "src/"
+      "AppiClients\\Rx\\Operator\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Rx\\Tests\\Custom\\Operator\\": "tests/"
+      "AppiClients\\Rx\\Tests\\Operator\\": "tests/"
     }
   },
   "config": {
