--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "rx/operator-extras": "2.0.x-dev"
   },
   "require-dev": {
-    "api-clients/test-utilities": "dev-master"
+    "api-clients/test-utilities": "^3.0.1"
   },
   "autoload": {
     "psr-4": {
