--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": "^7.0",
     "api-clients/rx": "dev-rxphp-2.0",
-    "rx/operator-extras": "2.0.x-dev"
+    "rx/operator-extras": "^2.0"
   },
   "require-dev": {
     "api-clients/test-utilities": "^3.0.1"
