--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,6 @@
 {
   "name": "api-clients/rx-operators",
   "license": "MIT",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
   "authors": [
     {
       "name": "Cees-Jan Kiewiet",
@@ -11,11 +9,11 @@
   ],
   "require": {
     "php": "^7.0",
-    "api-clients/rx": "dev-master",
+    "api-clients/rx": "^1.0",
     "rx/operator-extras": "^0.3.0"
   },
   "require-dev": {
-    "api-clients/test-utilities": "dev-master"
+    "api-clients/test-utilities": "^3.0.1"
   },
   "autoload": {
     "psr-4": {
