--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   ],
   "require": {
-    "php": "^7.0",
+    "php": "^7.2",
     "api-clients/rx": "^2.0",
     "rx/operator-extras": "^2.0"
   },
@@ -26,7 +26,10 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "platform": {
+      "php": "7.2"
+    }
   },
   "scripts": {
     "ensure-installed": "composer install --ansi -n -q",
