--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "api-clients/rx-operators",
+  "description": "Additional RxPHP operators",
   "license": "MIT",
   "authors": [
     {
